--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         <div class="col">
           <div class="hero">
             <h1>Try It Free Build The Community Your Fans Will Love</h1>
-            <p>Huddle re-imagines the
-              way we build communities. You have a voice, but so does your audience.
+            <p>
+              Huddle re-imagines the way we build communities. You have a voice, but so does your audience.
               Create connections with your users as you engage in genuine discussion.
             </p>
             <button> Get Started For Free </button>
