--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
-    <link rel="stylesheet" href="./build/css/index.min.css"/>
+    <link rel="stylesheet" href="./build/index.css"/>
     <!-- CDN FLEXBOXGRID http://flexboxgrid.com/ -->
     <link
       rel="stylesheet"
