working with footer

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
-    <link rel="stylesheet" href="./build/css/index.min.css"/>
+    <link rel="stylesheet" href="build/styles/index.css"/>
     <!-- CDN FLEXBOXGRID http://flexboxgrid.com/ -->
     <link
       rel="stylesheet"
@@ -119,42 +119,7 @@
       </div>
 
       <!-- Footer Section -->
-      <div class="row">
-        <div class="col-xs-12">
-          <p>Hunddle</p>
-          <div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua</p>
-            <img src="" alt="">
-          </div>
-          <div>
-            <img src="" alt="">
-            <p>+1-543-123-4567</p>
-          </div>
-          <div>
-            <img src="images/icon-email.svg" alt="">
-            <p>example@huddle.com</p> 
-          </div></div>
-          
-        </div>
-        <div class="col-xs-12">
-          <p>About Us</p>
-          <p>What We Do</p>
-          <p>FAQ</p>
-        </div>
-        <div class="col-xs-12">
-          <p>Career</p>
-          <p>Blog</p>
-          <p>Contact Us &copy;</p>
-        </div>
-        <div class="col-xs-12">
-          <img src="" alt="">
-          <img src="" alt="">
-          <img src="" alt="">
-        </div>
-      </div>
 
-    </div>
     
     <!-- Hero section info -->
     Try It Free Build The Community Your Fans Will Love Huddle re-imagines the
@@ -179,6 +144,39 @@
     Copyright 2018 Huddle. All rights reserved.
 
     <footer>
+      <div class="row footer">
+        <div class="col-xs-12">
+          <img src="images/logo.svg" alt="logo-huddle" class="logo-footer">
+          <div class="caja">
+            <img src="images/icon-location.svg" alt="" class="logo-footer">
+            <p class="caja-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua</p>           
+          </div>
+          <div class="caja">
+            <img src="images/icon-phone.svg" alt="" class="logo-footer">
+            <p class="caja-p">+1-543-123-4567</p>
+          </div>
+          <div class="caja">
+            <img src="images/icon-email.svg" alt="" class="logo-footer">
+            <p class="caja-p">example@huddle.com</p>           
+          </div>
+        </div>  
+        <div class="col-xs-12">
+          <p>About Us</p>
+          <p>What We Do</p>
+          <p>FAQ</p>
+        </div>
+        <div class="col-xs-12">
+          <p>Career</p>
+          <p>Blog</p>
+          <p>Contact Us &copy;</p>
+        </div>
+        <div class="col-xs-12">
+          <img src="" alt="">
+          <img src="" alt="">
+          <img src="" alt="">
+        </div>
+      </div>
       <p class="attribution">
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
