Cards en mobile *done*

--- a/index.html
+++ b/index.html
@@ -48,59 +48,86 @@
             <div class="col-xs-12">
               
             </div>
-            <p>Huddle re-imagines the
-              way we build communities. You have a voice, but so does your audience.
+            <p>
+              Huddle re-imagines the way we build communities. You have a voice, but so does your audience.
               Create connections with your users as you engage in genuine discussion.
             </p>
             <button class="btn-primary"> Get Started For Free </button>
           </div> 
         </div>
         <div class="col-xs-12">
-          <img src="./images/illustration-mockups.svg" alt="bg-hero">
+          <img class="card-img" src="./images/illustration-mockups.svg" alt="bg-hero">
         </div>
       </div>
 
       <!-- Content section -->
       <div class="row">
-        <div class="col">
+        <div class="col-xs-12">
 
           <!-- First Card -->
           <div class="row">
-            <div class="col">
+            <div class="col-xs-12">
               <div class="card">
-                <h2>Grow together</h2>
-                <p>
-                  Generate meaningful discussions with your
-                  audience and build a strong, loyal community. Think of the insightful
-                  conversations you miss out on with a feedback form. 
-                </p>
+                <div class="row">
+                  <div class="col-xs-12 col-md-6">
+                    <img class="card-img" src="./images/illustration-grow-together.svg" alt="...">
+                  </div>
+                  <div class="col-xs-12 col-md-6">
+                    <div class="card-title">
+                      <h2>Grow together</h2>
+                    </div>
+                    <div class="card-body">
+                      Generate meaningful discussions with your
+                      audience and build a strong, loyal community. Think of the insightful
+                      conversations you miss out on with a feedback form.
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
 
           <!-- Second Card -->
           <div class="row">
-            <div class="col">
+            <div class="col-xs-12">
               <div class="card">
-                <h2>Flowing conversations</h2>
-                <p>
-                  You wouldn't paginate a conversation in real life, so why do it online? Our
-                  threads have just-in-time loading for a more natural flow.
-                </p>
+                <div class="row">
+                  <div class="col-xs-12 col-md-6">
+                    <img class="card-img" src="./images/illustration-flowing-conversation.svg" alt="...">
+                  </div>
+                  <div class="col-xs-12 col-md-6">
+                    <div class="card-title">
+                      <h2>Flowing conversations</h2>
+                    </div>
+                    <div class="card-body">
+                      You wouldn't paginate a conversation in real life, so why do it online? Our
+                      threads have just-in-time loading for a more natural flow.
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
 
           <!-- Third Card -->
           <div class="row">
-            <div class="col">
+            <div class="col-xs-12">
               <div class="card">
-                <h2>Your users</h2>
-                <p>
-                  It takes no time at all to integrate Huddle with your app's authentication
-                  solution. This means, once signed in to your app, your users can start
-                  chatting immediately. 
-                </p>
+                <div class="row">
+                  <div class="col-xs-12 col-md-6">
+                    <img class="card-img" src="./images/illustration-your-users.svg" alt="...">
+                  </div>
+                  <div class="col-xs-12 col-md-6">
+                    <div class="card-title">
+                      <h2>Your users</h2>
+                    </div>
+                    <div class="card-body">
+                      It takes no time at all to integrate Huddle with your app's authentication
+                      solution. This means, once signed in to your app, your users can start
+                      chatting immediately.
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -110,7 +137,7 @@
       
       <!-- Overfooter content -->
       <div class="row">
-        <div class="col">
+        <div class="col-xs-12">
           <div class="overFooter">
             <h2> Ready To Build Your Community? </h2>
             <button class="btn-primary">Get Started For Free</button>
