--- a/index.html
+++ b/index.html
@@ -68,18 +68,19 @@
           <div class="row">
             <div class="col-xs-12">
               <div class="card">
-                <div class="row">
+                <div class="row" style="display: flex; flex-direction:row-reverse; align-items: center">
                   <div class="col-xs-12 col-md-6">
                     <img class="card-img" src="./images/illustration-grow-together.svg" alt="...">
                   </div>
                   <div class="col-xs-12 col-md-6">
-                    <div class="card-title">
-                      <h2>Grow together</h2>
-                    </div>
+                    <h2 class="card-title">
+                      Grow together
+                    </h2>
                     <div class="card-body">
                       Generate meaningful discussions with your
-                      audience and build a strong, loyal community. Think of the insightful
-                      conversations you miss out on with a feedback form.
+                      audience and build a strong, loyal community. 
+                      Think of the insightful conversations you miss 
+                      out on with a feedback form.
                     </div>
                   </div>
                 </div>
@@ -91,7 +92,7 @@
           <div class="row">
             <div class="col-xs-12">
               <div class="card">
-                <div class="row">
+                <div class="row" style="display: flex; align-items: center">
                   <div class="col-xs-12 col-md-6">
                     <img class="card-img" src="./images/illustration-flowing-conversation.svg" alt="...">
                   </div>
@@ -113,7 +114,7 @@
           <div class="row">
             <div class="col-xs-12">
               <div class="card">
-                <div class="row">
+                <div class="row" style="display: flex; flex-direction:row-reverse; align-items: center">
                   <div class="col-xs-12 col-md-6">
                     <img class="card-img" src="./images/illustration-your-users.svg" alt="...">
                   </div>
