cards fixed on mobile and DT

--- a/index.html
+++ b/index.html
@@ -62,11 +62,12 @@
       </div>
 
       <!-- Content section -->
-      <div class="row center-xs m-t-50">
+      <div class="row center-xs p-l-20 p-r-20 p-t-50">
         <div class="col-xs-12">
 
           <!-- First Card -->
-          <div class="row"
+          
+          <div class="row card-p-d"
             <div class="col-xs-12">
               <div class="card p-t-10 p-r-10 p-b-10 p-l-10 m-t-20 m-r-20 m-b-35 m-l-20">
                 <div class="row reverse middle-md">
@@ -88,16 +89,16 @@
               </div>
             </div>
           </div>
-
+ 
           <!-- Second Card -->
-          <div class="row">
+          <div class="row card-p-d">
             <div class="col-xs-12">
               <div class="card  p-t-10 p-r-10 p-b-10 p-l-10 m-t-20 m-r-20 m-b-35 m-l-20">
                 <div class="row middle-md">
                   <div class="col-xs-12 col-md-6">
                     <img class="card-img m-b-30" src="./images/illustration-flowing-conversation.svg" alt="...">
                   </div>
-                  <div class="col-xs-12 col-md-6 m-b-20 p-l-30 p-r-30 middle-md">
+                  <div class="col-xs-12 col-md-6 m-b-20 p-l-30 p-r-30">
                     <div class="card-title m-b-20">
                       <h2>Flowing conversations</h2>
                     </div>
@@ -112,7 +113,7 @@
           </div>
 
           <!-- Third Card -->
-          <div class="row">
+          <div class="row card-p-d">
             <div class="col-xs-12">
               <div class="card  p-t-10 p-r-10 p-b-10 p-l-10 m-t-20 m-r-20 m-b-35 m-l-20">
                 <div class="row reverse middle-md">
