--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@
       <!-- Hero Section -->
       <div class="row hero">
         <div class="col-xs-12">
-          <div class="row between-xs p-t-25">
-            <div class="col-xs-4 p-l-25">
+          <div class="row between-xs p-t-25 ">
+            <div class="col-xs-4 p-l-25 m-l-50">
               <img src="./images/logo.svg" alt="logo-huddle" class="logo">
             </div>
-            <div class="col-xs-offset-3s col-xs-5">
+            <div class="col-xs-offset-3  col-md-offset-0 col-xs-5 end-md m-r-50">
               <button class="btn-secondary">Try It Free</button>
             </div>
           </div>
         </div>
-        <div class="col-xs-12">
+        <div class="col-xs-12 col-md-6">
           <div class="row center-xs m-r-20 m-l-20">
             <div class="col-xs-12">
               <h1 class="title m-t-50">Build The Community Your Fans Will Love</h1>
@@ -54,7 +54,7 @@
             </div>
           </div> 
         </div>
-        <div class="col-xs-12">
+        <div class="col-xs-12 col-md-6">
           <div class="m-t-50  m-b-50 m-r-20 m-l-20">
             <img src="./images/illustration-mockups.svg" alt="bg-hero" class="mockupImg" > 
           </div>
