--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
-    <link rel="stylesheet" href="./build/index.css"/>
+    <link rel="stylesheet" href="build/styles/index.css"/>
     <!-- CDN FLEXBOXGRID http://flexboxgrid.com/ -->
     <link
       rel="stylesheet"
@@ -154,9 +154,11 @@
 
       <!-- Footer Section -->
       <footer>
-        <div class="row footer m-t-100" role="contentinfo">
+        <div class="row footer center m-t-100" role="contentinfo">
           <div class="col-xs-12 m-t-50">
-            <img src="images/Logo2.svg" alt="logo-huddle" class="logo">
+            <img src="images/Logo2.svg" alt="logo-huddle" class="logo-huddle">
+          </div>
+          <div class="col-xs-12 col-md-4">
             <div class="caja">
               <img src="images/icon-location.svg" alt="" class="logo-footer">
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
@@ -171,27 +173,27 @@
               <p>example@huddle.com</p>           
             </div>
           </div>  
-          <div class="col-xs-12">
+          <div class="col-xs-12 col-md-2">
             <p>About Us</p>
             <p>What We Do</p>
             <p>FAQ</p>
           </div>
-          <div class="col-xs-12">
+          <div class="col-xs-12 col-md-1">
             <p>Career</p>
             <p>Blog</p>
             <p>Contact Us</p>
           </div>
-          <div class="col-xs-12">
+          <div class="col-xs-12 col-md-3">
             <div class="row center-xs m-t-25">
               <div class="col-xs-8">
                 <i class="fab fa-facebook-f logo-redes"></i>
                 <i class="fab fa-twitter logo-redes"></i>
                 <i class="fab fa-instagram logo-redes" ></i>
-              </div>
-              <div class="col-xs-10">
-                <p class="copyright">&copy; Copyright 2018 Huddle. All rights reserved.</p>
               </div>            
             </div>
+          </div>
+          <div class="col-xs-10 ">
+            <p class="copyright">&copy; Copyright 2018 Huddle. All rights reserved.</p>
           </div>
         </div>
       </footer>
