--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class="row hero middle-md center-xs">
         <div class="col-xs-12">
           <div class="row around-xs p-t-25">
-            <div class="col-xs-4  col-md-4">
+            <div class="col-xs-5  col-md-4 start-xs">
               <img src="./images/logo.svg" alt="logo-huddle" class="logo">
             </div>
             <div class="col-xs-5  col-md-4 end-xs">
@@ -40,16 +40,16 @@
         </div>
         <div class="col-xs-10 col-md-6">
           <div class="row center-xs start-md">
-            <div class="col-xs-12 col-md-offset-2 col-md-8">
+            <div class="col-xs-12 col-md-offset-1 col-md-8">
               <h1 class="title m-t-50">Build The Community Your Fans Will Love</h1>
             </div>
-            <div class="col-xs-12 col-md-offset-2 col-md-10">
+            <div class="col-xs-12 col-md-offset-1 col-md-10">
               <p class="subcontent-hero">Huddle re-imagines the
                 way we build communities. You have a voice, but so does your audience.
                 Create connections with your users as you engage in genuine discussion.
               </p>
             </div>
-            <div class="col-xs-10  col-md-offset-2 col-md-4">
+            <div class="col-xs-10  col-md-offset-1 col-md-4">
               <button class="btn-primary subcontent-hero m-t-25"> Get Started For Free </button>
             </div>
           </div> 
